# document-intelligence-refinery

./: DOMAIN_NOTES.md  Dockerfile  FINAL_REPORT.md  INTERIM_REPORT.md  LESSONS_LEARNED.md  README.md  config.yaml  extraction_ledger.jsonl  main.py  pyproject.toml  run_pipeline.py
.refinery/: extraction_ledger.jsonl  fact_table.sqlite
.refinery/chroma/: chroma.sqlite3
.refinery/chroma/4283e568-eed7-45f2-9839-2079e43b0485/: index_metadata.pickle
.refinery/chunks/: Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  Internship report.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
.refinery/docling_output/: CBE ANNUAL REPORT 2023-24_docling.md  docling_summary.json  fta_performance_survey_final_report_2022_docling.md
.refinery/extractions/Audit Report - 2023/: Audit Report - 2023_layout.md  extracted.json
.refinery/indexes/: Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  Internship report.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
.refinery/profiles/: Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  Internship report.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
notebooks/: docling_exploration.py  exploration.py  table_exploration.py
rubric/: extraction_rules.yaml
scripts/: ask.py  run_chunking.py  run_extraction.py  run_indexing.py  run_triage.py  validate_pipeline.py
src/agents/: chunker.py  fact_extractor.py  indexer.py  query_agent.py  triage.py
src/extraction/: fact_table.py  ledger.py  router.py
src/models/: chunk.py  document_profile.py  extracted_document.py  fact_table.py  index.py  provenance.py
src/utils/: fact_table.py  vector_store.py
tests/: test_chunking.py  test_indexing.py
(+8 files in other folders)
